--- a/weekly-test-5/index.html
+++ b/weekly-test-5/index.html
@@ -41,36 +41,36 @@
         </div>
     </nav>
     <section class="hero">
-        <a href="#" class="image"><img
+        <a href="#" class="bg-image"><img
                 src="https://boostedusa.com/cdn/shop/files/boosted-rev-electric-scooter-now-in-stock_c5926a3e-f2ff-46a9-9c91-97765798bac4_1800x.jpg?v=1646159164"
                 alt="">
-            <div class="image-overlay"><img
+            <div class="bg-image-overlay"><img
                     src="//cdn.shopify.com/s/files/1/0268/1454/6031/files/Boosted-Boards-Scooters-Logo_1600x.png?v=1586529318"
                     alt="">
                 <p>Boosted Revs and Accessories are still in shock</p>
             </div>
         </a>
-        <a href="#" class="image"><img
+        <a href="#" class="bg-image"><img
                 src="https://boostedusa.com/cdn/shop/files/Boosted-USA-Super-73-Home-Box-feature-600x544_600x.jpg?v=1680839620"
                 alt="">
-            <div class="image-overlay"><img
+            <div class="bg-image-overlay"><img
                     src="https://cdn.shopify.com/s/files/1/0268/1454/6031/files/Super73_Logo_Horizontal_Trademark_Black_1000x200_69f340ae-d549-4366-822d-2af1de3536f9.png?v=1680833677"
                     alt="">
                 <p>Boosted USA x Super73 <br> Join the Ride</p>
             </div>
         </a>
-        <a href="#" class="image"><img
+        <a href="#" class="bg-image"><img
                 src="https://boostedusa.com/cdn/shop/files/evolve-electric-skateboard-now-in-stock_600x.jpg?v=1646159245"
                 alt="">
-            <div class="image-overlay"><img
+            <div class="bg-image-overlay"><img
                     src="https://cdn.shopify.com/s/files/1/0268/1454/6031/files/evolve-skateboards-Logo_1600x_9dd56e5e-9387-4c75-b277-2b884d7b621d.png?v=1655827750"
                     alt="">
                 <p>Boosted USA has Teamed Up with Evolve Electric <br> Skateboards</p>
             </div>
         </a>
-        <a href="#" class="image"><img
+        <a href="#" class="bg-image"><img
                 src="https://boostedusa.com/cdn/shop/files/minimotors-electric-scooters-2_600x.jpg?v=1655828690" alt="">
-            <div class="image-overlay"><img
+            <div class="bg-image-overlay"><img
                     src="https://cdn.shopify.com/s/files/1/0268/1454/6031/files/mini-motors-Scooters-Logo_1600x_29d965c5-a31a-45d9-84ef-ea6e5987ab74.png?v=1655827949"
                     alt="">
                 <p>Boosted USA is now introducing Minimotors <br>Electric Scooters</p>
